<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opt_flow_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yasu313nori@gmail.com">Yasunori Toshimitsu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>camera_common</depend>
  <depend>image_common</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport_plugins</depend>
  <depend>usb_camera_driver</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
